<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUpdateContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_update_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/firstName"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUpdateContact" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_update_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/lastName"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_firstName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_update_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/company"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_lastName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_update_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/address"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_company" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_update_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/tel"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_address" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_update_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/mail"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_tel" />

    <Spinner
        android:id="@+id/tv_update_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_mail" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/updateContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>